# WeightAndSee

./: .gitignore  CMakeLists.txt  Main.qml  README.md  datacenter.cpp  datacenter.h  exercisemodel.cpp  exercisemodel.h  exerciseprovider.cpp  exerciseprovider.h  icons.qrc  main.cpp  qml.qrc
android/: AndroidManifest.xml  build.gradle
android/src/main/: AndroidManifest.xml
android/src/main/java/com/dreSoft/weightAndSee/: ThemeUtils.java
android/src/main/res/values/: styles.xml  themes.xml
data/: exerciseList.txt
qml/: BasePage.qml  ConfirmActionDialog.qml  ConfirmDeleteDialog.qml  EditExerciseDialog.qml  ExerciseDelegate.qml  ExerciseGraph.qml  ExitSplash.qml  FloatButton.qml  GraphPage.qml  HistoryDelegate.qml  HistoryDialog.qml  MenuPage.qml  MessagePopup.qml  MuscleGroupFilter.qml  NavigationHeader.qml  NewExerciseDialog.qml  NumberSpinner.qml  NumericTextField.qml  SearchBox.qml  SelectionPage.qml  SettingsPage.qml  Splash.qml  Style.qml  SubMenuPage.qml  SummaryGrid.qml  SummaryItem.qml  Tooltip.qml
